--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
   "name": "pmclain/module-twilio",
   "description": "Twilio SMS Notifications",
+  "version": "2.0.3",
   "require": {
     "php": "~5.6.0|~7.0.0|~7.1.0|~7.2.0",
-    "magento/framework": "~100.0.0|~100.1.0|~100.2.0|~101.0.0",
-    "magento/module-ui": "~100.0.0|~100.1.0|~100.2.0|~101.0.0",
-    "magento/module-config": "~100.0.0|~100.1.0|~100.2.0|~101.0.0",
-    "magento/module-checkout": "~100.0.0|~100.1.0|~100.2.0",
+    "magento/framework": "~100.0|~101.0|~102.0",
+    "magento/module-ui": "~100.0|~101.0|~102.0",
+    "magento/module-config": "~100.0|~101.0|~102.0",
+    "magento/module-checkout": "~100.0|~101.0|~102.0",
     "twilio/sdk": "~5.15.0"
   },
   "type": "magento2-module",
